--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kanban-board",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://bhardwajdisha.github.io/Kanban-Board",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
